force-app/main/default/objects/ctu__CTU_Mass_Clone__c/ctu__CTU_Mass_Clone__c.object-meta.xml
<CustomObject>
    <label>CTU Mass Clone</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>CTU Mass Clone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CTU Mass Clones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>