force-app/main/default/objects/ctu__CTU_Mass_Clone__c/fields/ctu__Original_User__c.field-meta.xml
<CustomField>
    <fullName>ctu__Original_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CTU_Mass_Clones</relationshipName>
    <type>Lookup</type>
</CustomField>