force-app/main/default/objects/ctu__CTU_Mass_Clone__c/fields/ctu__Processed__c.field-meta.xml
<CustomField>
    <fullName>ctu__Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>