force-app/main/default/objects/ctu__CTU_Mass_Clone__c/fields/ctu__Remove_Original_User__c.field-meta.xml
<CustomField>
    <fullName>ctu__Remove_Original_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Original User</label>
    <type>Checkbox</type>
</CustomField>