force-app/main/default/objects/ctu__CTU_Mass_Clone__c/fields/ctu__Type__c.field-meta.xml
<CustomField>
    <fullName>ctu__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permission Set Assignment</fullName>
            </value>
            <value>
                <fullName>Queue Membership</fullName>
            </value>
            <value>
                <fullName>Public Group Membership</fullName>
            </value>
            <value>
                <fullName>Permission Set License Assignment</fullName>
            </value>
            <value>
                <fullName>Chatter Group</fullName>
            </value>
            <value>
                <fullName>Account Team Membership</fullName>
            </value>
            <value>
                <fullName>Opportunity Team Membership</fullName>
            </value>
            <value>
                <fullName>Case Team Membership</fullName>
            </value>
            <value>
                <fullName>Account Team</fullName>
            </value>
            <value>
                <fullName>Opportunity Team</fullName>
            </value>
            <value>
                <fullName>Case Ownership</fullName>
            </value>
            <value>
                <fullName>Opportunity Ownership</fullName>
            </value>
            <value>
                <fullName>Lead Ownership</fullName>
            </value>
            <value>
                <fullName>Account Ownership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>